Fixed color issues; added shuffle buttons for each hand in case game gets stuck in endless loop

--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@
     justify-items: center; 
 }
 
+h1 {
+    color: #faf9f5;
+    font-size: 40pt;
+    text-align: center;
+    grid-row: 1;
+    grid-column: 2;
+}
+
 .gameArea {
     grid-area: 2 / 2;
     width: 60%;
@@ -23,7 +31,7 @@
     padding: 10px;
     border: 2px solid black;
     border-radius: 20px;
-    background-color: green;
+    background-image: linear-gradient(to bottom right, green, #006000);
     display: grid;
     gap: 10px;
     grid-template: 20% 35% 10% 15% 20% / repeat(6, 1fr);
@@ -68,7 +76,86 @@
     color: #faf9f5;
     grid-row: 4;
     grid-column: 2 / 6;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
+}
+
+.card {
+    display: inline-block;
+    position: relative;
+    margin: 10px;
+    width: 105px;
+    height: 150px;
+    font-family: 'Cardo', serif;
+    font-size: x-large;
+    border-radius: 7px;
+}
+  
+.red {
+    color: #da1711;
+}
+
+.black {
+    color: #181815;
+}
+
+.empty {
+    border: 1px solid black;
+}
+
+.obverse {
+    text-align: center;
+    border: 1px solid #151718;
+    background-color: #faf9f5;
+    box-shadow: 0 3px 5px #282828;
+    cursor: pointer;
+}
+
+.reverse {
+    border: 1px solid #151718;
+    background-image: url("./cardBack.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 0 3px 5px #282828;
+    cursor: pointer;
+}
+
+#deck1 {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+#active1 {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+#active2 {
+    grid-row: 2;
+    grid-column: 4;
+}
+
+#deck2 {
+    grid-row: 2;
+    grid-column: 6;
+}
+
+.playerCount {
+    grid-row: 3;
+    grid-column: 1;
+    padding-bottom: 40px;
+    width: 120px;
+    font-size: medium;
+    text-align: center;
+}
+
+.opponentCount {
+    grid-row: 3;
+    grid-column: 6;
+    padding-bottom: 40px;
+    width: 120px;
+    font-size: medium;
+    text-align: center;
 }
 
 .resetButton {
@@ -105,79 +192,44 @@
     top: 1.5px;
 }
 
-.card {
-    display: inline-block;
+.shuffleButton {
+    width: 10%;
+    min-width: 100px;
+    height: 10%;
+    min-height: 25px;
+    margin-bottom: 100px;;
+    color: #eae9e5;
+    border: 2px solid black;
+    border-radius: 30px;
+    background-image: linear-gradient(to bottom right, #383835, #585855);
+    box-shadow: 0 3px 5px #282828;
+    font-size: small;
+    text-align: center;
+    line-height: 25px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+#shuffle1 {
+    grid-row: 4;
+    grid-column: 1;
+}
+
+#shuffle2 {
+    grid-row: 4;
+    grid-column: 6;
+}
+
+.shuffleButton:hover {
+    color: white;
+    border: 2px solid white;
+    -webkit-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+     transform: scale(1.02);
+}
+
+.shuffleButton:active {
     position: relative;
-    margin: 10px;
-    width: 105px;
-    height: 150px;
-    font-family: 'Cardo', serif;
-    font-size: x-large;
-    border-radius: 7px;
-}
-  
-.red {
-    color: #da1711;
-}
-
-.black {
-    color: #181815;
-}
-
-.empty {
-    background-color: green;
-}
-
-.obverse {
-    text-align: center;
-    border: 1px solid #151718;
-    background-color: #faf9f5;
-    box-shadow: 0 3px 5px #282828;
-    cursor: pointer;
-}
-
-.reverse {
-    border: 1px solid #151718;
-    background-image: url("./cardBack.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    box-shadow: 0 3px 5px #282828;
-    cursor: pointer;
-}
-
-.card.reverse.player {
-    grid-row: 2;
-    grid-column: 1;
-}
-
-.card.obverse.player {
-    grid-row: 2;
-    grid-column: 3;
-}
-
-.card.obverse.opponent {
-    grid-row: 2;
-    grid-column: 4;
-}
-
-.card.reverse.opponent {
-    grid-row: 2;
-    grid-column: 6;
-}
-
-.playerCount {
-    grid-row: 3;
-    grid-column: 1;
-    width: 120px;
-    font-size: medium;
-    text-align: center;
-}
-
-.opponentCount {
-    grid-row: 3;
-    grid-column: 6;
-    width: 120px;
-    font-size: medium;
-    text-align: center;
+    box-shadow: 0px 1px 3px black;
+    top: 1.5px;
 }
